--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Weather App</title>
+    <link rel="stylesheet" href="main.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <div class="app-wrapper">
+        <header>
+            <input type="text" autocomplete="off" class="search-box" placeholder="Search for a city..." />
+        </header>
+        <main>
+            <section class="location">
+                <div class="city">San Fransisco, California, USA</div>
+                <div class="date">Thursday, August 13th, 2020</div>
+            </section>
+            <div class="current">
+                <div class="temp">15<span>°C</span></div>
+                <div class="weather">Sunny</div>
+                <div class="hi-low">26°C / 31°C</div>
+
+            </div>
+        </main>
+    </div>
+
+
+    <script src="main.js"></script>
 </body>
 
 </html>
